--- a/src/css/base.less
+++ b/src/css/base.less
@@ -305,7 +305,8 @@ a {
             float: left;
             display: inline-block;
             font-size: 14px;
-            width: 135px;
+            // width: 135px;
+            width: 40%;
             @media screen and (max-width: 720px) {
                 width: 100%;
                 margin-bottom: 5px;
