--- a/src/css/print.less
+++ b/src/css/print.less
@@ -46,12 +46,12 @@
         .content-bd {
             padding-top: 25px;
             padding-bottom: 50px;
-            // .content-left{
-            //     width: 100%;
-            // }
-            // .content-right{
-            //     width: 100%;
-            // }
+            .content-left{
+                width: 100%;
+            }
+            .content-right{
+                width: 100%;
+            }
         }
         section {
             padding-top: 12px;
